5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1716_2506.log
== TEST (2019-05-14 17:41:56) 
-- CODE:
anos = 0
quant = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant-retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quant * percent/100
	quant + = acrescimo
	quant - = quant-retirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 7
    quant + = acrescimo
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:47) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant-retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade + = acrescimo
	quantidade - = quant-retirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 7
    quantidade + = acrescimo
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:27) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant-retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += percent
	quantidade - = quant-retirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 8
    quantidade - = quant-retirada
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:11) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant-retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade - = quant-retirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 8
    quantidade - = quant-retirada
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:49) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade - = quan_tretirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 8
    quantidade - = quan_tretirada
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:10) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade - = quaant_retirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 8
    quantidade - = quaant_retirada
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:19) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quaant_retirada
	anos + = 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
File "XXXX", line 9
    anos + = 1
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:26) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quaant_retirada
	anos += 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade -= quaant_retirada
NameError: name 'quaant_retirada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:46:17) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade -= quaant_retirada
NameError: name 'quaant_retirada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:00) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade -= quaant_retirada
NameError: name 'quaant_retirada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:47:28) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while( 0 < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade -= quaant_retirada
NameError: name 'quaant_retirada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:36) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while(0 <quantidade < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quant <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(quant <= 0):
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:59) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while(0 <quantidade < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quantidade <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:11) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while(0 <quantidade < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quantidade <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- EXECUTION TIME:
0.191342
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:48:12) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while(0 <quantidade < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quantidade <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:48:48) 
-- CODE:
anos = 0
quantidade = float(input('quantidade inicial de tambaquis: '))
percent = float(input('percentual de crescimento no tanque: '))
quant_retirada = float(input('quantidade retirada para venda: '))
while(0 <quantidade < 12000):
	acrescimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quant_retirada
	anos += 1
if(quantidade <= 0):
	print('EXTINCAO')
else:
	print('LIMITE')
print(anos)

		
-- EXECUTION TIME:
0.158822
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
